# flowai-harness

./: .gitignore  Cargo.toml  NOTICE  README.md  SECURITY.md  flake.nix
crates/agent-fw-agent/: Cargo.toml
crates/agent-fw-agent/src/: approval.rs  basic_tools.rs  conversation.rs  dispatcher_rig.rs  hook_bridge.rs  interpreter.rs  interpreter_contract.rs  layer.rs  lib.rs  metrics_accumulator.rs  model.rs  orchestrator.rs  prompt_composer.rs  request_scoped_tools.rs  rig_factory.rs  rig_history.rs  rig_hook.rs  run_artifacts.rs  runtime_contract.rs  runtime_protocol.rs  stream_runtime.rs  subagent_handlers.rs  tool_dispatch.rs  tool_handler.rs  tool_middleware.rs  tool_suite.rs
crates/agent-fw-algebra/: Cargo.toml
crates/agent-fw-algebra/src/: agent_memory.rs  approval.rs  cancellation.rs  data_source_pool.rs  encryption.rs  error.rs  event_log.rs  event_sink.rs  fallback.rs  job_registry.rs  kv_store.rs  lib.rs  nursery.rs  parallel.rs  pause.rs  pipeline.rs  resource.rs  retry.rs  schedule.rs  scope.rs  sub_agent.rs  target_db.rs  test_case_index.rs  testing.rs  timeout.rs  timing.rs  validated.rs  vector_store.rs  writable_db.rs
crates/agent-fw-catalog/: Cargo.toml
crates/agent-fw-catalog-index/: Cargo.toml
crates/agent-fw-catalog-index/src/: cursor.rs  error.rs  facets.rs  lib.rs  path.rs  projection.rs  schema.rs  tantivy_backend.rs
crates/agent-fw-catalog-index/tests/: projection.rs  scope_isolation.rs  tantivy_backend.rs
crates/agent-fw-catalog-tools/: Cargo.toml
crates/agent-fw-catalog-tools/src/: lib.rs  tier1_discovery.rs  tool_metadata.rs
crates/agent-fw-catalog-tools/tests/: catalog_surface_contract.rs  catalog_surface_handlers.rs  catalog_surface_laws.rs
crates/agent-fw-catalog/src/: api.rs  artifact.rs  catalog.rs  composer.rs  datasource.rs  diagnostics.rs  discovery.rs  enrichment.rs  entry.rs  identifier.rs  ingestion.rs  knowledge.rs  lib.rs  profiling.rs  provisioner.rs  scope.rs  search_backend.rs  table_role.rs  tool_env.rs
crates/agent-fw-catalog/tests/: semantic_contract.rs
crates/agent-fw-cli/: Cargo.toml
crates/agent-fw-cli/examples/: composition_demo.rs
crates/agent-fw-cli/src/: catalog_export.rs  lib.rs  main.rs
crates/agent-fw-cli/tests/: catalog_export.rs
crates/agent-fw-core/: Cargo.toml
crates/agent-fw-core/src/: algebra.rs  approval.rs  chat.rs  composition_overrides.rs  cost.rs  datasource.rs  id.rs  latency.rs  lib.rs  model_catalog.rs  non_empty.rs  provider_connection.rs  provider_settings.rs  sequenced.rs  stream_builder.rs  stream_part.rs  tenant.rs  text.rs  tool_overrides.rs  tool_registry_overrides.rs  usage.rs  workspace_context.rs
crates/agent-fw-eval/: Cargo.toml
crates/agent-fw-eval/proptest-regressions/: cost.txt  types.txt
crates/agent-fw-eval/src/: builder_session_store.rs  builder_tools.rs  comparison.rs  cost.rs  event_bus.rs  expand_token.rs  ground_truth.rs  lib.rs  orchestration_executor.rs  orchestrator.rs  result_aggregator.rs  sample_executor.rs  scorer.rs  scoring.rs  stream_capture.rs  test_case.rs  trace.rs  types.rs
crates/agent-fw-ingest/: Cargo.toml
crates/agent-fw-ingest/proptest-regressions/: vector_ingest.txt
crates/agent-fw-ingest/src/: builder.rs  ingestion.rs  introspection.rs  job_store.rs  knowledge_extraction.rs  knowledge_ingestion.rs  knowledge_store.rs  lib.rs  profiling.rs  vector_ingest.rs
crates/agent-fw-interpreter/: Cargo.toml
crates/agent-fw-interpreter/proptest-regressions/: sqlite_kv.txt
crates/agent-fw-interpreter/src/: aes_encryption.rs  anthropic.rs  anthropic_enricher.rs  approval_store.rs  cached_enricher.rs  channel_sink.rs  column_signature_cache.rs  dashmap_kv.rs  dual_catalog_writer.rs  durable_event_sink.rs  error_catalog.rs  error_sub_agent.rs  error_target_db.rs  instrumented_kv.rs  lancedb_vector_store.rs  lib.rs  local_provisioner.rs  memory_event_log.rs  mock_catalog.rs  mock_enricher.rs  mock_provisioner.rs  mock_sub_agent.rs  mock_target_db.rs  mock_vector_store.rs  mock_writable_db.rs  neon_provisioner.rs  network_sub_agent.rs  noop_encryption.rs  noop_vector_store.rs  openai_compatible.rs  openrouter_embeddings.rs  pg_data_source_pool.rs  pgvector_store.rs  postgres_catalog.rs  postgres_kv.rs  redis_kv.rs  retry_catalog.rs  retry_defaults.rs  retry_kv.rs  retry_target_db.rs  (+11 more)
crates/agent-fw-mcp/: Cargo.toml
crates/agent-fw-plan/: Cargo.toml
crates/agent-fw-reference/: Cargo.toml
crates/agent-fw-resolve/: Cargo.toml
crates/agent-fw-search/: Cargo.toml
crates/agent-fw-test/: Cargo.toml
crates/agent-fw-tool/: Cargo.toml
crates/agent-fw-tool-macro/: Cargo.toml
crates/agent-fw-workspace/: Cargo.toml
crates/flowai-harness-cli/: Cargo.toml
crates/flowai-runtime/: Cargo.toml
examples/coordinator_planner_executor/: .envrc  .gitignore  README.md  pyproject.toml
examples/inventory_scenario/: .gitignore  README.md  pyproject.toml
py-flowai-harness/: .env.example  Cargo.toml  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
py-flowai-harness/docs/: changelog.md  index.md  quickstart.md
py-flowai-harness/flowai_harness/: __init__.py  _internal.pyi  _native.py  _schema.py  _version.py  agents.py  cli.py  docs_export.py  evals.py  glimpse.py  mcp.py  plans.py  prompts.py  references.py  runtime.py  tenant.py  tools.py  unions.py
py-flowai-harness/scripts/: rebuild-local-extension.sh
py-flowai-harness/src/: lib.rs
py-flowai-harness/tests/: __init__.py  studio_test_client.py  test_agents.py  test_cli.py  test_cli_mcp.py  test_constructors.py  test_docs_export.py  test_evals.py  test_glimpse.py  test_import_surface.py  test_mcp_api.py  test_mcp_bindings.py  test_preview_scripts.py  test_prompts.py  test_runtime_callbacks.py  test_runtime_coordinator_smoke.py  test_runtime_data_environment.py  test_runtime_wire_shape.py  test_studio_app.py  test_studio_chat.py  test_studio_data.py  test_studio_run_events.py  test_studio_runs_approvals.py  test_studio_server.py  test_studio_static_build.py  test_studio_store_evals.py  test_studio_test_builder.py  test_studio_tests_evals.py  test_tagged_union.py
(+601 files in other folders)
