[workspace]
members = [
    "crates/agent-fw-core",
    "crates/agent-fw-search",
    "crates/agent-fw-algebra",
    "crates/agent-fw-catalog",
    "crates/agent-fw-catalog-index",
    "crates/agent-fw-catalog-tools",
    "crates/agent-fw-plan",
    "crates/agent-fw-reference",
    "crates/agent-fw-resolve",
    "crates/agent-fw-eval",
    "crates/agent-fw-workspace",
    "crates/agent-fw-ingest",
    "crates/agent-fw-interpreter",
    "crates/agent-fw-tool",
    "crates/agent-fw-tool-macro",
    "crates/agent-fw-agent",
    "crates/agent-fw-mcp",
    "crates/flowai-runtime",
    "crates/flowai-harness-cli",
    "py-flowai-harness",
    "crates/agent-fw-test",
    "crates/agent-fw-cli",
]
exclude = [
    "third_party/rig",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.88"
license = "LicenseRef-FlowAI-Private-Preview"

[workspace.dependencies]
# Internal crates
agent-fw-core = { path = "crates/agent-fw-core" }
agent-fw-algebra = { path = "crates/agent-fw-algebra" }
agent-fw-interpreter = { path = "crates/agent-fw-interpreter" }
agent-fw-tool = { path = "crates/agent-fw-tool" }
agent-fw-tool-macro = { path = "crates/agent-fw-tool-macro" }
agent-fw-agent = { path = "crates/agent-fw-agent" }
agent-fw-mcp = { path = "crates/agent-fw-mcp" }
flowai-runtime = { path = "crates/flowai-runtime" }
flowai-harness-cli = { path = "crates/flowai-harness-cli" }
agent-fw-search = { path = "crates/agent-fw-search" }
agent-fw-catalog = { path = "crates/agent-fw-catalog" }
agent-fw-catalog-index = { path = "crates/agent-fw-catalog-index" }
agent-fw-catalog-tools = { path = "crates/agent-fw-catalog-tools" }
agent-fw-plan = { path = "crates/agent-fw-plan" }
agent-fw-reference = { path = "crates/agent-fw-reference" }
agent-fw-resolve = { path = "crates/agent-fw-resolve" }
agent-fw-eval = { path = "crates/agent-fw-eval" }
agent-fw-workspace = { path = "crates/agent-fw-workspace" }
agent-fw-ingest = { path = "crates/agent-fw-ingest" }
agent-fw-test = { path = "crates/agent-fw-test" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"
tantivy = "0.26.1"

# Error handling
thiserror = "2.0"
anyhow = "1"

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# JSON Schema validation. `default-features = false` drops the
# http/file resolvers (we never want refs to fetch from the network);
# `features = ["draft202012"]` opts the `Draft::Draft202012` variant
# back in (it is feature-gated in jsonschema 0.18 — without this,
# `Draft::default()` falls back to Draft 7 and 2020-12 keywords like
# `prefixItems` are silently ignored).
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }

# JSON Schema generation for crates that expose schema artifacts.
schemars = "1"

# Bytes
bytes = "1"

# Pin projection
pin-project = "1"

# Concurrent collections
dashmap = "6"

# Tracing
tracing = "0.1"

# Python harness FFI
pyo3 = "0.23"
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = "8"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Configuration
toml = "0.8"
regex-lite = "0.1"

# Glob pattern matching
glob = "0.3"

# Dev/test utilities
tempfile = "3"

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "json", "chrono", "rust_decimal", "uuid"] }

# Decimal
rust_decimal = { version = "1.36", features = ["serde-with-str"] }

# Arrow / Parquet
arrow = { version = "57", default-features = false, features = ["prettyprint"] }
arrow-array = { version = "57", default-features = false }
arrow-schema = { version = "57", default-features = false }
parquet = { version = "57", default-features = false, features = ["arrow", "snap"] }

# LanceDB (embedded vector store)
lancedb = { version = "0.26", default-features = false }

# SQL parsing (AST-level validation)
sqlparser = { version = "0.53", features = ["visitor"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# CSV
csv = "1.3"

# LLM runtime
rig = { package = "rig-core", git = "https://github.com/0xPlaygrounds/rig.git", rev = "128a96e61fcd1c942466c225ad6ccb25e5364d18" }
rig-bedrock = { package = "rig-bedrock", git = "https://github.com/0xPlaygrounds/rig.git", rev = "128a96e61fcd1c942466c225ad6ccb25e5364d18" }
aws-config = "1"
aws-sdk-bedrockruntime = "1"

# MCP
rmcp = { version = "1.7.0", default-features = false, features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "server-side-http",
    "tower",
] }

# Testing
proptest = "1.9"
hegel = { package = "hegeltest", git = "https://github.com/hegeldev/hegel-rust", rev = "810166ea3c7c96df1d6250eb22d1ba66ad8c762c" }
tokio-test = "0.4"

[patch."https://github.com/0xPlaygrounds/rig.git"]
rig-core = { path = "third_party/rig/rig/rig-core" }
rig-bedrock = { path = "third_party/rig/rig-integrations/rig-bedrock" }
rig-derive = { path = "third_party/rig/rig/rig-derive" }
