[package]
name = "flowai-harness-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python facade for the Flow AI Harness runtime"

[lib]
name = "_internal"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
# Build OpenSSL from source and statically link it. Used by the wheel CI
# (.github/workflows/wheels.yml) so binary wheels have no runtime libssl
# dependency and cross-compiles (e.g. linux aarch64) don't need a target
# OpenSSL installed. Off by default; the source install path is unchanged.
openssl-vendored = ["openssl-sys/vendored"]

[dependencies]
agent-fw-agent = { workspace = true }
agent-fw-algebra = { workspace = true }
agent-fw-catalog = { workspace = true }
agent-fw-core = { workspace = true }
agent-fw-eval = { workspace = true }
agent-fw-ingest = { workspace = true }
agent-fw-interpreter = { workspace = true, features = ["postgres", "redis", "rig-chat"] }
agent-fw-mcp = { workspace = true }
agent-fw-plan = { workspace = true }
agent-fw-reference = { workspace = true }
agent-fw-tool = { workspace = true }
async-trait = { workspace = true }
# Optional; only referenced by the `openssl-vendored` feature above.
openssl-sys = { version = "0.9", optional = true }
flowai-harness-cli = { workspace = true }
flowai-runtime = { workspace = true }
futures = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
