[package]
name = "agent-fw-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data catalog types, traits, and domain model (discovery, profiling, enrichment, provisioning)"

[dependencies]
agent-fw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
agent-fw-tool = { workspace = true }
agent-fw-tool-macro = { workspace = true }

[dev-dependencies]
agent-fw-algebra = { workspace = true }
agent-fw-test = { workspace = true }
hegel = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
