[package]
name = "agent-fw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure domain types for the agent framework (no async, no IO)"

[features]
default = []
axum = ["dep:axum-core", "dep:http"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
axum-core = { version = "0.5", optional = true }
http = { version = "1", optional = true }

[dev-dependencies]
hegel = { workspace = true }
