[package]
name = "agent-fw-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Introspection, profiling, catalog builder, and ingestion orchestrator"

[dependencies]
agent-fw-core = { workspace = true }
agent-fw-algebra = { workspace = true }
agent-fw-catalog = { workspace = true }
agent-fw-workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
agent-fw-interpreter = { workspace = true }
rusqlite = { workspace = true }
tokio-test = { workspace = true }
hegel = { workspace = true }
tempfile = { workspace = true }
