[package]
name = "agent-fw-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agent-fw-agent.workspace = true
agent-fw-tool.workspace = true
axum.workspace = true
jsonschema.workspace = true
rmcp.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
agent-fw-algebra.workspace = true
async-trait.workspace = true
reqwest.workspace = true
