[package]
name = "agent-fw-reference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reusable typed reference and glimpse primitive for agent-framework runtimes"

[dependencies]
agent-fw-algebra = { workspace = true }
agent-fw-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
agent-fw-interpreter = { workspace = true }
tokio = { workspace = true }
