[package]
name = "agent-fw-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure fuzzy matching, FilterSet lattice, and set operations (no async, no IO)"

[dependencies]
agent-fw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
hegel = { workspace = true }
rust_decimal_macros = "1.36"
