[package]
name = "agent-fw-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tool framework with extensible ToolEnvironment"

[dependencies]
agent-fw-core = { workspace = true }
agent-fw-algebra = { workspace = true }
agent-fw-tool-macro = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
