[package]
name = "flowai-harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Canonical CLI for the Flow AI harness"

[lib]
name = "flowai_harness_cli"

[[bin]]
name = "flowai-harness"
path = "src/main.rs"

[dependencies]
agent-fw-algebra = { workspace = true }
agent-fw-agent = { workspace = true }
agent-fw-catalog = { workspace = true }
agent-fw-core = { workspace = true }
agent-fw-ingest = { workspace = true }
agent-fw-interpreter = { workspace = true, features = ["http-clients"] }
agent-fw-mcp = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
flowai-runtime = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
flowai-runtime = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
